--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     <title>AwesomeBus</title>
   </head>
   <body>
-    <script src="awesomebus-bundle.js"></script>
+    <script src="static-awesomebus-bundle.js"></script>
   </body>
 </html>
