--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AwesomeBus</title>
+    <style>
+      body {
+      margin: 0;
+      }
+
+      path {
+        fill: none;
+        stroke: #000;
+        stroke-linejoin: round;
+        stroke-linecap: round;
+      }
+
+      .major_road { stroke: #776; }
+      .minor_road { stroke: #ccb; }
+      .highway { stroke: #d4b24b; stroke-width: 1.5px; }
+      .rail { stroke: #7de; }
+    </style>
   </head>
   <body>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="static/d3.geo.tile.min.js"></script>
     <script src="static/static-awesomebus-bundle.js"></script>
   </body>
 </html>
