--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
     <title>AwesomeBus</title>
     <style>
       body {
-      margin: 0;
+        margin: 0;
       }
 
-      path {
+      .road-layer {
         fill: none;
         stroke: #000;
         stroke-linejoin: round;
