add d3.geo.tile plugin

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
         margin: 0;
       }
 
+      .water {
+        fill: #468ba4;
+        stroke: #468ba4;
+      }
+
       .road-layer {
         fill: none;
         stroke: #000;
