omg I made a line

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
         margin: 0;
       }
 
+      .path {
+        fill: red;
+        stroke: red;
+      }
       .water {
         fill: #468ba4;
         stroke: #468ba4;
