--- a/awesomebus.css
+++ b/awesomebus.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
 }
 
+/* Map styles */
 .route {
   fill: none;
 }
@@ -22,3 +23,27 @@ body {
 .minor_road { stroke: #ccb; }
 .highway { stroke: #d4b24b; stroke-width: 1.5px; }
 .rail { stroke: #7de; }
+
+/* UI panel styles */
+#ui-overlay {
+  position: absolute;
+  z-index: 2;
+
+  bottom: 30px;
+  left: 30px;
+  height: 150px;
+  width: 250px;
+
+  background-color: #FDFCF8;
+  box-shadow: 0px 0px 5px 2px #39616F;
+  border-radius: 2px;
+}
+
+input {
+  margin: 6px;
+  padding: 3px;
+  border-color: transparent;
+  border-bottom-color: green;
+  font-size: 16px;
+  width: 228px;
+}
