--- a/awesomebus.css
+++ b/awesomebus.css
@@ -39,11 +39,11 @@ body {
   border-radius: 2px;
 }
 
-input {
+#route-input {
   margin: 6px;
   padding: 3px;
-  border-color: transparent;
-  border-bottom-color: green;
+  border: none;
+  border-bottom: solid 2px green;
   font-size: 16px;
   width: 228px;
 }
