--- a/awesomebus.css
+++ b/awesomebus.css
@@ -35,7 +35,7 @@ body {
 
   bottom: 25px;
   left: 25px;
-  height: 160px;
+  height: 250px;
   width: 250px;
 
   background-color: #FDFCF8;
@@ -44,13 +44,37 @@ body {
   padding: 10px;
 }
 
-#route-input {
+.ui-item {
   margin: 6px 0;
+}
+
+h3 {
+  color: green;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+#subtitle {
+  font-size: 14px;
+  color: #474747;
+}
+
+#route-input {
   padding: 3px;
   border: none;
   border-bottom: solid 2px green;
   font-size: 16px;
-  width: 220px;
+  width: 170px;
+}
+
+#reset {
+  background-color: #019401;
+  color: white;
+  border: 1px solid #007900;
+  border-radius: 4px;
+  padding: 5px 11px;
+  font-size: 14px;
+  margin-left: 3px;
 }
 
 #route-input:focus {
@@ -61,18 +85,11 @@ body {
   visibility: hidden;
 }
 
-h3 {
-  color: green;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 6px 0;
-}
-
 #selected-text {
-  margin: 8px 4px;
+  margin-left: 4px;
 }
 
-#source {
+.footer {
   position: absolute;
   bottom: 8px;
   font-size: 10px;
