--- a/awesomebus.css
+++ b/awesomebus.css
@@ -6,6 +6,14 @@ body {
   margin: 0;
 }
 
+rect.selection {
+    stroke          : gray;
+    stroke-dasharray: 4px;
+    stroke-opacity  : 1;
+    fill            : transparent;
+}
+
+
 /* Map styles */
 .route {
   fill: none;
