--- a/awesomebus.css
+++ b/awesomebus.css
@@ -7,10 +7,25 @@ body {
 }
 
 rect.selection {
-    stroke          : gray;
+    stroke          : #ff0dbf; /* NEON PINK */
     stroke-dasharray: 4px;
     stroke-opacity  : 1;
+    stroke-width    : 4;
     fill            : transparent;
+}
+
+/* from http://bl.ocks.org/d3noob/a22c42db65eb00d4e369*/
+div.tooltip { 
+    position: absolute;     
+    text-align: center;     
+    width: 50px;          
+    height: 20px;         
+    padding: 2px;       
+    font: 14px sans-serif;    
+    background: lightsteelblue; 
+    border: 0px;    
+    border-radius: 8px;     
+    pointer-events: none;     
 }
 
 
