--- a/awesomebus.css
+++ b/awesomebus.css
@@ -14,6 +14,17 @@ rect.selection {
     fill            : transparent;
 }
 
+/* from (sort of) https://github.com/MasterMaps/d3-slider */
+
+.d3-slider {
+    position: relative;
+    font-family: Verdana,Arial,sans-serif;
+    font-size: 1.1em;
+    border: 1px solid #aaaaaa;
+    z-index: 2;
+}
+
+
 /* from http://bl.ocks.org/d3noob/a22c42db65eb00d4e369*/
 div.tooltip { 
     position: absolute;     
@@ -32,7 +43,9 @@ div.tooltip {
 /* Map styles */
 .route {
   fill: none;
+
 }
+
 
 .ocean, .water, .riverbank, .reservoir {
   fill: #468ba4;
@@ -111,6 +124,17 @@ h3 {
 #selected-text {
   margin-left: 4px;
 }
+
+#slider {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 10px;
+  width: 500px;
+  color: green;
+}
+
+
 
 .footer {
   position: absolute;
