--- a/awesomebus.css
+++ b/awesomebus.css
@@ -18,24 +18,28 @@ body {
 
 
 /* from http://bl.ocks.org/d3noob/a22c42db65eb00d4e369*/
-div.tooltip { 
-    position: absolute;     
-    text-align: center;     
-    width: 50px;          
-    height: 20px;         
-    padding: 2px;       
-    font: 14px sans-serif;    
-    background: lightsteelblue; 
-    border: 0px;    
-    border-radius: 8px;     
-    pointer-events: none;     
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 50px;
+    height: 20px;
+    padding: 2px;
+    font: 14px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 
 /* Map styles */
 .route {
   fill: none;
+}
 
+.stop {
+  fill: #306929;
+  fill-opacity: 0.8;
 }
 
 
