--- a/awesomebus.css
+++ b/awesomebus.css
@@ -12,7 +12,7 @@ body {
 }
 
 /* from (sort of) https://github.com/MasterMaps/d3-slider */
-.d3-slider {
+#slider-range {
   position: absolute;
   top: 10px;
   left: 360px;
