--- a/awesomebus.css
+++ b/awesomebus.css
@@ -24,11 +24,12 @@ body {
 div.tooltip {
     position: absolute;
     text-align: center;
-    padding: 2px;
+    padding: 4px;
     font: 14px sans-serif;
-    background: lightsteelblue;
-    border: 0px;
-    border-radius: 8px;
+    background-color: white;
+    border-width: 3px;
+    border: 1px solid black;
+    border-radius: 2px;
     pointer-events: none;
 }
 
