--- a/awesomebus.css
+++ b/awesomebus.css
@@ -78,6 +78,13 @@ h3 {
   color: #474747;
 }
 
+#instructions {
+  font-size: 14px;
+  color: #474747;
+  margin: 7px 0;
+  padding-left: 25px;
+}
+
 #route-input {
   padding: 3px;
   border: none;
